update to preprint V3

--- a/docs/r-references.bib
+++ b/docs/r-references.bib
@@ -74,20 +74,6 @@
 	note = {Publisher: Nature Publishing Group}
 }
 
-@article{hoven2023,
-	title = {Differences in metacognitive functioning between obsessive{\textendash}compulsive disorder patients and highly compulsive individuals from the general population},
-	author = {Hoven, Monja and Rouault, Marion and Holst, Ruth van and Luigjes, Judy},
-	year = {2023},
-	month = {12},
-	date = {2023-12},
-	journal = {Psychological Medicine},
-	pages = {7933--7942},
-	volume = {53},
-	number = {16},
-	doi = {10.1017/S003329172300209X},
-	url = {https://www.cambridge.org/core/journals/psychological-medicine/article/differences-in-metacognitive-functioning-between-obsessivecompulsive-disorder-patients-and-highly-compulsive-individuals-from-the-general-population/EAD0A269F621299B2BDE7F0498D3833E},
-	langid = {en}
-}
 
 @article{hoven2023a,
 	title = {How do confidence and self-beliefs relate in psychopathology: a transdiagnostic approach},
@@ -1513,4 +1499,76 @@ PMCID: PMC11372192},
   number = {13},
   pages = {1--26},
   doi = {10.18637/jss.v082.i13},
+}
+@Manual{R-gridExtra,
+  title = {gridExtra: Miscellaneous Functions for "Grid" Graphics},
+  author = {Baptiste Auguie},
+  year = {2017},
+  note = {R package version 2.3},
+  url = {https://CRAN.R-project.org/package=gridExtra},
+}
+
+@article{fox2023,
+	title = {An observational treatment study of metacognition in anxious-depression},
+	author = {Fox, Celine Ann and Lee, Chi Tak and Hanlon, Anna Kathleen and Seow, Tricia XF and Lynch, Kevin and Harty, {Siobhán} and Richards, Derek and Palacios, Jorge and {O'Keane}, Veronica and Stephan, Klaas Enno and Gillan, Claire M},
+	editor = {Pike, Alex and Roiser, Jonathan},
+	year = {2023},
+	month = {10},
+	date = {2023-10-11},
+	journal = {eLife},
+	pages = {RP87193},
+	volume = {12},
+	doi = {10.7554/eLife.87193},
+	url = {https://doi.org/10.7554/eLife.87193},
+	note = {Publisher: eLife Sciences Publications, Ltd}
+}
+
+@article{miller2001,
+	title = {Misunderstanding analysis of covariance.},
+	author = {Miller, Gregory A. and Chapman, Jean P.},
+	year = {2001},
+	month = {02},
+	date = {2001-02},
+	journal = {Journal of Abnormal Psychology},
+	pages = {40--48},
+	volume = {110},
+	number = {1},
+	doi = {10.1037/0021-843X.110.1.40},
+	url = {https://doi.apa.org/doi/10.1037/0021-843X.110.1.40},
+	langid = {en}
+}
+
+@article{beck2016,
+	title = {A Unified Model of Depression: Integrating Clinical, Cognitive, Biological, and Evolutionary Perspectives},
+	author = {Beck, Aaron T. and Bredemeier, Keith},
+	year = {2016},
+	month = {07},
+	date = {2016-07},
+	journal = {Clinical Psychological Science},
+	pages = {596--619},
+	volume = {4},
+	number = {4},
+	doi = {10.1177/2167702616628523},
+	url = {https://journals.sagepub.com/doi/10.1177/2167702616628523},
+	note = {Publisher: SAGE Publications},
+	langid = {en}
+}
+
+@article{sookud,
+	title = {Impaired goal-directed planning in transdiagnostic compulsivity is explained by uncertainty about learned task structure},
+	author = {Sookud, Sirichat and Martin, Ingrid and Gillan, Claire and Wise, Toby},
+	langid = {en}
+}
+
+@article{mazor2025,
+	title = {Inference About Absence as a Window Into the Mental Self-Model},
+	author = {Mazor, Matan},
+	year = {2025},
+	month = {04},
+	date = {2025-04-22},
+	journal = {Open Mind},
+	pages = {635--651},
+	volume = {9},
+	doi = {10.1162/opmi_a_00206},
+	url = {https://doi.org/10.1162/opmi_a_00206}
 }
